# scientific_programming_mathematics

./: README.md
final_project/book/: CMakeLists.txt  PTriple.cpp  PTriple.h  gcd.h  main.cpp
final_project/pythagorean_thriple/: CMakeLists.txt  PyTriple.cpp  PyTriple.h  gcd.h  main.cpp
lectureNassignment/lec 11/Series11/: CMakeLists.txt  Makefile  main  main.cpp  upper.cpp  upper.hpp  vector.cpp  vector.h
lectureNassignment/lec1/lec_codes/: explicit_type_casting  explicit_type_casting.c  implicit_type_casting  implicit_type_casting.c  logical_concatenation  logical_concatenation.c  type_casting  type_casting.c
lectureNassignment/lec1/series01/: circle  circle.c  exercisegrade  exercisegrade.c  locate  locate.c  prize  prize.c  pythagoras  pythagoras.c  rectangle  rectangle.c  sort3
lectureNassignment/lec10/series10/: CMakeLists.txt  Makefile  example.cpp  fraction.cpp  fraction.hpp  main  main.cpp  output
lectureNassignment/lec2/series02/: evenorodd  evenorodd.c  fibonacci  fibonacci.c  rounding  rounding.c  scalarproduct  scalarproduct.c  sort3.c  teiler  teiler.c
lectureNassignment/lec7/mycpp/: CMakeLists.txt  customer.hpp  ellipse.hpp  name.cpp  name.hpp  palindrome.cpp  roman.cpp  triangle.cpp  triangle.hpp  university.cpp  university.hpp
lectureNassignment/lec8/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  matrix.cpp  matrix.h  vector.cpp  vector.h
lectureNassignment/lec8/series08/: 8.4.cpp  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  matrix.cpp  matrix.hpp  tic_tac.cpp  tic_tac_toe.cpp
(+89 files in other folders)
