cmake_minimum_required(VERSION 3.19)
project(mycpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(mycpp main.cpp)
add_executable(triangle triangle.cpp)
add_executable(customer customer.cpp)
add_executable(decVSbin decVSbin.cpp)
add_executable(ellipse ellipse.cpp)
add_executable(name name.cpp)
add_executable(roman roman.cpp)
add_executable(university university.cpp)
add_executable(palindrome palindrome.cpp)
